<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.android.quizappbytomalab.MainActivity"
        >

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/welcomeBottom"
            android:layout_marginEnd="@dimen/welcomeRight"
            android:layout_marginLeft="@dimen/welcomeLeft"
            android:layout_marginRight="@dimen/welcomeRight"
            android:layout_marginStart="@dimen/welcomeLeft"
            android:layout_marginTop="@dimen/welcomeTop"
            android:background="@color/welcome"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/welcome"
            android:textAllCaps="true"
            android:textColor="@color/welcomeText"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/name_field"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/editTextBottom"
            android:layout_marginEnd="@dimen/editTextRight"
            android:layout_marginLeft="@dimen/editTextLeft"
            android:layout_marginRight="@dimen/editTextRight"
            android:layout_marginStart="@dimen/editTextLeft"
            android:layout_marginTop="@dimen/editTextTop"
            android:gravity="center_horizontal"
            android:hint="@string/name_field"
            android:inputType="textCapWords"
            android:textColorHint="@color/hint" />

        <TextView
            android:id="@+id/intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dareDevilBottom"
            android:layout_marginEnd="@dimen/dareDevilRight"
            android:layout_marginLeft="@dimen/dareDevilLeft"
            android:layout_marginRight="@dimen/dareDevilRight"
            android:layout_marginStart="@dimen/dareDevilLeft"
            android:layout_marginTop="@dimen/dareDevilTop"
            android:background="@color/intro"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/intro"
            android:textAllCaps="false"
            android:textColor="@color/introText"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/questionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/QBottom"
            android:layout_marginEnd="@dimen/QRight"
            android:layout_marginLeft="@dimen/QLeft"
            android:layout_marginRight="@dimen/QRight"
            android:layout_marginStart="@dimen/QLeft"
            android:layout_marginTop="@dimen/QTop"
            android:background="@color/questionOne"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/questionOne"
            android:textAllCaps="false"
            android:textColor="@color/questionOneText"
            android:textSize="22sp" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"

            android:id="@+id/radioQ1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/QARight"
            android:layout_marginLeft="@dimen/QALeft"
            android:layout_marginRight="@dimen/QARight"
            android:layout_marginStart="@dimen/QALeft"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/A1Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/A1Q1" />

            <RadioButton
                android:id="@+id/A2Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/A2Q1" />

            <RadioButton
                android:id="@+id/A3Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:onClick="onRadioButtonClicked"
                android:text="@string/A3Q1" />

            <RadioButton
                android:id="@+id/A4Q1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/A4Q1" />

        </RadioGroup>

        <TextView
            android:id="@+id/questionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/QBottom"
            android:layout_marginEnd="@dimen/QRight"
            android:layout_marginLeft="@dimen/QLeft"
            android:layout_marginRight="@dimen/QLeft"
            android:layout_marginStart="@dimen/QLeft"
            android:layout_marginTop="@dimen/QTop"
            android:background="@color/questionTwo"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/questionTwo"
            android:textAllCaps="false"
            android:textColor="@color/questionTwoText"
            android:textSize="22sp" />


        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/QARight"
            android:layout_marginLeft="@dimen/QALeft"
            android:layout_marginRight="@dimen/QARight"
            android:layout_marginStart="@dimen/QALeft"
            android:orientation="vertical"
            android:id="@+id/radioQ2">

            <RadioButton
                android:id="@+id/A1Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/A1Q2" />

            <RadioButton
                android:id="@+id/A2Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/A2Q2" />

            <RadioButton
                android:id="@+id/A3Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/A3Q2" />

            <RadioButton
                android:id="@+id/A4Q2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/A4Q2" />

        </RadioGroup>

        <TextView
            android:id="@+id/questionThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/QBottom"
            android:layout_marginEnd="@dimen/QRight"
            android:layout_marginLeft="@dimen/QLeft"
            android:layout_marginRight="@dimen/QLeft"
            android:layout_marginStart="@dimen/QLeft"
            android:layout_marginTop="@dimen/QTop"
            android:background="@color/questionThree"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/questionThree"
            android:textAllCaps="false"
            android:textColor="@color/questionThreeText"
            android:textSize="22sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginEnd="@dimen/QARight"
            android:layout_marginLeft="@dimen/QALeft"
            android:layout_marginRight="@dimen/QARight"
            android:layout_marginStart="@dimen/QALeft"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/A1Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A1Q3" />

            <CheckBox
                android:id="@+id/A2Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A2Q3" />

            <CheckBox
                android:id="@+id/A3Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A3Q3" />

            <CheckBox
                android:id="@+id/A4Q3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A4Q3" />
        </LinearLayout>

        <TextView
            android:id="@+id/questionFour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/QBottom"
            android:layout_marginEnd="@dimen/QRight"
            android:layout_marginLeft="@dimen/QLeft"
            android:layout_marginRight="@dimen/QLeft"
            android:layout_marginStart="@dimen/QLeft"
            android:layout_marginTop="@dimen/QTop"
            android:background="@color/questionFour"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/questionFour"
            android:textAllCaps="false"
            android:textColor="@color/questionFourText"
            android:textSize="22sp" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginEnd="@dimen/QARight"
            android:layout_marginLeft="@dimen/QALeft"
            android:layout_marginRight="@dimen/QARight"
            android:layout_marginStart="@dimen/QALeft"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/A1Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A1Q4" />

            <CheckBox
                android:id="@+id/A2Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A2Q4" />

            <CheckBox
                android:id="@+id/A3Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A3Q4" />

            <CheckBox
                android:id="@+id/A4Q4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/A4Q4" />
        </LinearLayout>

        <Button
            android:id="@+id/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/QBottom"
            android:layout_marginEnd="@dimen/QRight"
            android:layout_marginLeft="@dimen/QLeft"
            android:layout_marginRight="@dimen/QLeft"
            android:layout_marginStart="@dimen/QLeft"
            android:layout_marginTop="@dimen/QTop"
            android:background="@color/colorPrimary"
            android:onClick="submitAnswers"
            android:padding="16dp"
            android:text="@string/submit"
            android:textColor="@color/introText"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/correctResults"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text=""
                />

            <TextView
                android:id="@+id/wrongResults"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:text=""
                />

        </LinearLayout>
    </LinearLayout>

</ScrollView>